# market-ingest

./: .gitignore  README.md  pyproject.toml
src/market_ingest/: __init__.py  fetcher.py  schema.py
src/market_ingest/data/: __init__.py  db_functions.py
src/market_ingest/pipeline/: __init__.py  data_ingest.py
src/market_ingest/utils/: __init__.py  common.py
tests/: test_fetcher.py
